Finished page nav bar.

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -14,8 +14,32 @@
 
 
 <div class="container">
+
+    <div class="row justify-content-center justify-content-md-between text-center align-items-center nav-row">
+        <div class="col-12 col-sm-3 col-md-2 col-lg-1 order-sm-3 order-md-1 p-0 mr-lg-4 mr-xl-2" id="logo_col">
+            <img src="img/logo.png" alt="logo" id="logo">
+        </div>
+        <div class="col-12 col-md-2 order-sm-6 order-md-2 p-0 ml-lg-2 mr-auto">
+            <h2 class="text-nowrap page-title">
+                codeup design
+            </h2>
+        </div>
+        <!--<div class="w-100 d-none d-xs-block"></div>-->
+        <div class="col-2 mx-0 col-sm-2 col-md-1 order-xs-3 order-sm-1 order-md-3 text-left text-sm-center text-lg-left offset-md-3 p-0 mr-1">
+            <h6>SERVICES</h6>
+        </div>
+        <div class="col-2 mx-0 col-sm-2 col-md-1 order-xs-4 order-sm-2 order-md-4 text-center text-md-right text-lg-center p-0 pr-md-1 pr-lg-0">
+            <h6>WORK</h6>
+        </div>
+        <div class="col-2 mx-0 col-sm-2 col-md-1 order-xs-5 order-sm-4 order-md-5 text-center p-0">
+            <h6>BLOG</h6>
+        </div>
+        <div class="col-2 mx-0 col-sm-2 col-md-1 order-xs-5 order-sm-5 order-md-6 text-center p-0">
+            <h6>CONTACT</h6>
+        </div>
+    </div>
     <!--Main Header xs-->
-    <div class="row justify-content-center">
+    <div class="row justify-content-center mt-5">
 
         <!--Start on MD -->
         <div class="col-lg-1 d-none d-md-block"></div>
@@ -31,7 +55,7 @@
     <div class="row justify-content-center pt-4">
         <div class="col-1"></div>
         <div class="col-10">
-            <h2 id="utah">FROM PARK CITY, UTAH</h2>
+            <h2 class="page-h2" id="utah">FROM PARK CITY, UTAH</h2>
         </div>
         <div class="col-1"></div>
     </div>
@@ -79,7 +103,7 @@
         <div class="col-12 col-md-8">
             <div class="row mb-md-5">
                 <div class="col-sm-6">
-                    <img src="img/apple-ipad.jpg" alt="" class="mx-auto d-block">
+                    <img src="img/apple-ipad.jpg" alt="" class="mx-auto d-block article-images">
                     <p class="featured ml-4 ml-sm-3 ml-md-2 ml-lg-3 mt-lg-2 d-inline">FEATURED PROJECT</p>
                     <span class="mr-4 mr-sm-3 mt-1 mt-lg-0 float-right">
                                 <svg height="18px" width="18px" id="red_d" class="small-icons mt-lg-2">
@@ -108,7 +132,7 @@
                             </span>
                 </div>
                 <div class="col-sm-6 d-none d-sm-block">
-                    <img src="img/macbook.jpg" alt="" class="mx-auto d-block">
+                    <img src="img/macbook.jpg" alt="" class="mx-auto d-block article-images">
                     <p class="featured ml-sm-3 ml-md-2 ml-lg-3 mt-lg-2 d-inline">FEATURED PROJECT</p>
                     <span class="mr-4 mr-sm-3 mt-1 mt-lg-0 float-right">
                                 <svg height="18px" width="18px" id="red_d" class="small-icons mt-lg-2">
@@ -139,7 +163,7 @@
             </div>
             <div class="row d-none d-sm-flex">
                 <div class="col-sm-6">
-                    <img src="img/man.jpg" alt="" class="mx-auto d-block">
+                    <img src="img/man.jpg" alt="" class="mx-auto d-block article-images">
                     <p class="featured ml-sm-3 ml-md-2 ml-lg-3 mt-lg-2 d-inline">FEATURED PROJECT</p>
                     <span class="mr-4 mr-sm-3 mt-1 mt-lg-0 float-right">
                                 <svg height="18px" width="18px" id="red_d" class="small-icons mt-lg-2">
@@ -168,7 +192,7 @@
                             </span>
                 </div>
                 <div class="col-sm-6">
-                    <img src="img/security.jpg" alt="" class="mx-auto d-block">
+                    <img src="img/security.jpg" alt="" class="mx-auto d-block article-images">
                     <p class="featured ml-sm-3 ml-md-2 ml-lg-3 mt-lg-2 d-inline">FEATURED PROJECT</p>
                     <span class="mr-4 mr-sm-3 mt-1 mt-lg-0 float-right">
                                 <svg height="18px" width="18px" id="red_d" class="small-icons mt-lg-2">
@@ -202,21 +226,21 @@
         <!-- Working on The List Box -Michael -->
         <div class="col-md-4 d-none d-md-block pr-0 pl-0">
             <div>
-                <img class="the-list-img mr-3" src="img/mobile-phone.jpg" alt="Mobile Phone Data Secuirty">
-                <h2 class="text-left">THE ADMIN BAR AND ABSOLUTE POSITIONING</h2>
+                <img class="the-list-img mr-3 article-images" src="img/mobile-phone.jpg" alt="Mobile Phone Data Secuirty">
+                <h2 class="text-left page-h2">THE ADMIN BAR AND ABSOLUTE POSITIONING</h2>
             </div>
             <br>
             <div>
-                <img class="the-list-img mr-3" src="img/head.jpg" alt="3D rendered head">
-                <h2 class="text-left">NIBBLER AWESOME WEBSITE TESTING</h2>
+                <img class="the-list-img mr-3 article-images" src="img/head.jpg" alt="3D rendered head">
+                <h2 class="text-left page-h2">NIBBLER AWESOME WEBSITE TESTING</h2>
             </div>
             <br>
             <div>
-                <img class="the-list-img mr-3" src="img/ipad.jpg" alt="ipad with ranbow on screen">
-                <h2 class="text-left">HOW TO GET GOOGLE TO LIKE YOU</h2>
+                <img class="the-list-img mr-3 article-images" src="img/ipad.jpg" alt="ipad with ranbow on screen">
+                <h2 class="text-left page-h2">HOW TO GET GOOGLE TO LIKE YOU</h2>
             </div>
             <div class="mt-5">
-                <img class="twitter-logo float-left mr-2" src="img/twitter-logo-small.png" alt="Twitter Logo">
+                <img class="twitter-logo float-left mr-2 article-images" src="img/twitter-logo-small.png" alt="Twitter Logo">
                 <div class="tw-the-last float-left mt-1">LAST TWEET</div>
                 <div class="lor-tweet">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis dolor dolorem
