touch ups on The Last secition

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -223,7 +223,7 @@
             </div>
         </div>
 
-        <!-- Working on The List Box -Michael -->
+
         <div class="col-md-4 d-none d-md-block pr-0 pl-0">
             <div>
                 <img class="the-list-img mr-3 article-images" src="img/mobile-phone.jpg" alt="Mobile Phone Data Secuirty">
@@ -244,7 +244,9 @@
                 <div class="tw-the-last float-left mt-1">LAST TWEET</div>
                 <div class="lor-tweet">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis dolor dolorem
-                    error excepturi id iste itaque minima nisi nulla.
+                    error excepturi id iste itaque minima nisi nulla. Corporis dolor dolorem id iste itaque
+                    consectetur adipisicing elit.
+
                 </div>
             </div>
         </div>
