Added comments, removed old commented code.

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -15,6 +15,8 @@
 
 <div class="container">
 
+    <!--Navigation Bar-->
+
     <div class="row justify-content-center justify-content-md-between text-center align-items-center nav-row">
         <div class="col-12 col-sm-3 col-md-2 col-lg-1 order-sm-3 order-md-1 p-0 mr-lg-4 mr-xl-2" id="logo_col">
             <img src="img/logo.png" alt="logo" id="logo">
@@ -24,7 +26,6 @@
                 codeup design
             </h2>
         </div>
-        <!--<div class="w-100 d-none d-xs-block"></div>-->
         <div class="col-2 mx-0 col-sm-2 col-md-1 order-xs-3 order-sm-1 order-md-3 text-left text-sm-center text-lg-left offset-md-3 p-0 mr-1">
             <h6>SERVICES</h6>
         </div>
@@ -38,10 +39,10 @@
             <h6>CONTACT</h6>
         </div>
     </div>
-    <!--Main Header xs-->
-    <div class="row justify-content-center mt-5">
 
-        <!--Start on MD -->
+    <!--Main Header-->
+
+    <div class="row justify-content-center mt-5">
         <div class="col-lg-1 d-none d-md-block"></div>
         <div class="col-12 col-sm-6 col-md-6 col-lg-5 pr-2">
             <h1 id="visual-design-h">VISUAL DESIGN &</h1>
@@ -52,6 +53,8 @@
         <div class="col-lg-1 d-none d-md-block"></div>
     </div>
 
+    <!--Small Header-->
+
     <div class="row justify-content-center pt-4">
         <div class="col-1"></div>
         <div class="col-10">
@@ -59,7 +62,9 @@
         </div>
         <div class="col-1"></div>
     </div>
-    <!-- Added classes to each DIV DESIGN/DEVELOP/SUPPORT/HOST-->
+
+    <!--Large Icons-->
+
     <div class="row align-items-center text-center justify-content-center mt-sm-4 mb-sm-1 my-md-4 mt-lg-5 mb-lg-4">
         <div class="col-12 col-sm-9 col-lg-6 col-xl-5 p-0">
             <div class="row">
@@ -84,11 +89,15 @@
         </div>
     </div>
 
+    <!--Horizontal Rule-->
+
     <div class="row justify-content-center d-none d-sm-flex">
         <div class="col-sm-9 col-md-12">
             <hr>
         </div>
     </div>
+
+    <!--Page content Headings-->
 
     <div class="row mt-5 mt-sm-3 mb-sm-3 mb-sm-0 mt-md-5">
         <div class="col-sm-12 col-md-8 text-center text-md-left">
@@ -98,6 +107,8 @@
             <p>THE LAST</p>
         </div>
     </div>
+
+    <!--Featured Projects-->
 
     <div class="row">
         <div class="col-12 col-md-8">
@@ -223,6 +234,7 @@
             </div>
         </div>
 
+        <!--Sidebar-->
 
         <div class="col-md-4 d-none d-md-block pr-0 pl-0">
             <div>
@@ -252,77 +264,7 @@
         </div>
     </div>
 
-
-    <!--<div class="row justify-content-center pt-5">-->
-    <!--&lt;!&ndash;<div class="col-2 d-none d-sm-block"></div>&ndash;&gt;-->
-
-    <!--<div class="icon-spacing col d-flex flex-row-reverse pr-5 p-sm-0">-->
-    <!--<svg height="105px" width="105px" class="icons" id="design">-->
-
-    <!--<circle cx="52.5" cy="52.5" r="49.5px" stroke="white" stroke-width="6px" fill="#E6563B" />-->
-    <!--<text x="27" y="59" fill="white">DESIGN</text>-->
-    <!--Sorry, your browser does not support inline SVG.-->
-    <!--</svg>-->
-    <!--</div>-->
-    <!--<div class="icon-spacing col pl-5 p-sm-0">-->
-    <!--<svg height="105px" width="105px" class="icons" id="develop">-->
-
-    <!--<circle cx="52.5" cy="52.5" r="49.5px" stroke="white" stroke-width="6px" fill="#EB9D3A" />-->
-    <!--<text x="22" y="59" fill="white">DEVELOP</text>-->
-    <!--Sorry, your browser does not support inline SVG.-->
-    <!--</svg>-->
-    <!--</div>-->
-    <!--<div class="w-100 d-sm-none"></div>-->
-    <!--<div class="icon-spacing col d-flex flex-row-reverse pr-5 pt-5 p-sm-0">-->
-    <!--<svg height="105px" width="105px" class="icons" id="support">-->
-
-    <!--<circle cx="52.5" cy="52.5" r="49.5px" stroke="white" stroke-width="6px" fill="#7CB06C" />-->
-    <!--<text x="20" y="59" fill="white">SUPPORT</text>-->
-    <!--Sorry, your browser does not support inline SVG.-->
-    <!--</svg>-->
-    <!--</div>-->
-    <!--<div class="icon-spacing col pl-5 pt-5 p-sm-0">-->
-    <!--<svg height="105px" width="105px" class="icons" id="host">-->
-
-    <!--<circle cx="52.5" cy="52.5" r="49.5px" stroke="white" stroke-width="6px" fill="#00ABA9" />-->
-    <!--<text x="34" y="59" fill="white">HOST</text>-->
-    <!--Sorry, your browser does not support inline SVG.-->
-    <!--</svg>-->
-    <!--</div>-->
-
-    <!--&lt;!&ndash;<div class="col-2 d-none d-sm-block"></div>&ndash;&gt;-->
-
-    <!--</div>-->
-
-
-    <!--<svg height="105px" width="105px" id="design">-->
-
-    <!--<circle cx="52.5" cy="52.5" r="49.5px" stroke="white" stroke-width="6px" fill="#E6563B" />-->
-    <!--<text x="27" y="59" fill="white">DESIGN</text>-->
-    <!--Sorry, your browser does not support inline SVG.-->
-    <!--</svg>-->
-
-    <!--<svg height="105px" width="105px" id="develop">-->
-
-    <!--<circle cx="52.5" cy="52.5" r="49.5px" stroke="white" stroke-width="6px" fill="#EB9D3A" />-->
-    <!--<text x="22" y="59" fill="white">DEVELOP</text>-->
-    <!--Sorry, your browser does not support inline SVG.-->
-    <!--</svg>-->
-
-    <!--<svg height="105px" width="105px" id="support">-->
-
-    <!--<circle cx="52.5" cy="52.5" r="49.5px" stroke="white" stroke-width="6px" fill="#7CB06C" />-->
-    <!--<text x="20" y="59" fill="white">SUPPORT</text>-->
-    <!--Sorry, your browser does not support inline SVG.-->
-    <!--</svg>-->
-
-    <!--<svg height="105px" width="105px" id="host">-->
-
-    <!--<circle cx="52.5" cy="52.5" r="49.5px" stroke="white" stroke-width="6px" fill="#00ABA9" />-->
-    <!--<text x="34" y="59" fill="white">HOST</text>-->
-    <!--Sorry, your browser does not support inline SVG.-->
-    <!--</svg>-->
-
+    <!--Used for verbose breakpoints status-->
 
     <div class="d-block">xs</div>
     <div class="d-none d-sm-block">sm</div>
